--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Tailwind - Instalacion</title>
 </head>
 <body>
+    <h1 class="text-3x1 font-bold underline">Code With Mojica</h1>
     
 </body>
 </html>
