--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./output.css">
     <title>Tailwind - Instalacion</title>
 </head>
 <body>
-    <h1 class="text-3x1 font-bold underline">Code With Mojicas</h1>
+    <h1 class="text-3xl font-bold underline">Code With Mojicas</h1>
 
     
 </body>
